--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="main.js"></script>
     <link rel="stylesheet" href="main.css" />
 
+    <title>Interactive Confusion Matrix</title>
   </head>
   <body id="body">
 
