Not convinced by false alarm language

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
       </tr>
 
       <tr>
-        <th>False alarm rate</td>
+        <th>False positive rate</td>
         <td><span class="fp">{fp}</span> / <span class="n">{n | watch tn fp}</span> = </td>
         <td>{false_positive_rate | watch tn fp | percent}</td>
-        <td class='synonyms'>False positive rate, fall-out</td> 
+        <td class='synonyms'>Fall-out</td> 
       </tr>
 
       <tr>
