--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <tr>
         <th>'Accuracy'</td>
-        <td>(<span class="tp">{tp}</span> + <span class="tn">{tn}</span>) / (<span class="p">{p | watch tp fn}</span> + <span class="n">{n | watch fp tn}</span>) = </td>
+        <td>(<span class="tp">{tp}</span> + <span class="tn">{tn}</span>) / {total | watch tp tn fp fn} = </td>
         <td>{accuracy | watch tn fp tp fn | percent}</td>
       </tr>
 
@@ -108,16 +108,20 @@
 
       <tr>
         <th>False positive rate</td>
-        <td><span class="fp">{fp}</span> / <span class="n">{n | watch tn fp}</span> = </td>
+        <td>
+          <span class="fp">{fp}</span> / <span class="n">{n | watch tn fp}</span> = 
+        </td>
         <td>{false_positive_rate | watch tn fp | percent}</td>
-        <td class='synonyms'>Fall-out</td> 
+        <td class='synonyms'>Fall-out, 100% - <span class="specificity">{specificity | watch tn fp | percent}</span></td> 
       </tr>
 
       <tr>
-        <th>Miss rate</td>
-        <td><span class="fn">{fn}</span> / <span class="p">{p | watch tp fn}</span> = </td>
+        <th>False negative rate</td>
+        <td>
+          <span class="fn">{fn}</span> / <span class="p">{p | watch tp fn}</span> = 
+        </td>
         <td>{false_negative_rate | watch tp fn | percent}</td>
-        <td class='synonyms'>False negative rate</td> 
+        <td class='synonyms'>Miss rate, 100% - <span class="sensitivity"> {sensitivity | watch tp fn | percent} </span></td> 
       </tr>
 
       <tr>
