Add 'Fraction correct' synonym

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <th>'Accuracy'</td>
         <td>(<span class="tp">{tp}</span> + <span class="tn">{tn}</span>) / {total | watch tp tn fp fn} = </td>
         <td>{accuracy | watch tn fp tp fn | percent}</td>
+        <td class='synonyms'>Fraction correct</td> 
       </tr>
 
 
