Add 'bookmaker informedness' as synonym

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         </td>
         <td><span class='informedness'>{informedness | watch tn fp tp fn | percent}</span></td>
-        <td class='synonyms'>Youden's J</td> 
+        <td class='synonyms'>Youden's J, bookmaker informedness</td> 
 
       </tr>
 
