Add a really basic scale visualisation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body id="body">
 
-    <table id="table_confusion_matrix">
+    <table class="table_confusion_matrix">
 
       <tr>
         <td colspan="2" />
@@ -33,16 +33,32 @@
       <tr>
         <th rowspan="2" scope="row" class='actual_condition_header'>Actual Condition</th>
         <th class="p" scope="row">Positive</th>
-        <td class="tp big_four"><label for="tp">True Positives</label> <input type="number" name="tp" rv-value="tp" min="0"></td>
-        <td class="fn big_four"><label for="fn">False Negatives</label><input type="number" name="fn" rv-value="fn" min="0"></td>
+        <td class="tp big_four">
+          <div class="scale_blob" style="bottom: 0;right: 0;" rv-square_size_rem="tp_size | watch tp tn fp fn "></div>
+          <label for="tp">True Positives</label> 
+          <input type="number" name="tp" rv-value="tp" min="0">
+        </td>
+        <td class="fn big_four">
+          <div class="scale_blob" style="bottom: 0; left: 0;" rv-square_size_rem="fn_size | watch tp tn fp fn "></div>
+          <label for="fn">False Negatives</label>
+          <input type="number" name="fn" rv-value="fn" min="0">
+        </td>
         <td class="p">{p | watch tp fn}</td>
       </tr>
       
       <tr>
         <!-- th from above -->
         <th class="n" scope="row">Negative</th>
-        <td class="fp big_four"><label for="fp">False Positives</label><input type="number" name="fp" rv-value="fp" min="0"></td>
-        <td class="tn big_four"><label for="tn">True Negatives</label> <input type="number" name="tn" rv-value="tn" min="0"></td>
+        <td class="fp big_four">
+          <div class="scale_blob" style="top: 0; right: 0;" rv-square_size_rem="fp_size | watch tp tn fp fn "></div>
+          <label for="fp">False Positives</label>
+          <input type="number" name="fp" rv-value="fp" min="0">
+        </td>
+        <td class="tn big_four">
+          <div class="scale_blob" style="top: 0; left: 0;" rv-square_size_rem="tn_size | watch tp tn fp fn "></div>
+          <label for="tn">True Negatives</label> 
+          <input type="number" name="tn" rv-value="tn" min="0">
+        </td>
         <td class="n">{n | watch fp tn}</td>
       </tr>
 
@@ -53,6 +69,7 @@
       </tr>
 
     </table>
+
 
     <table id="statistics">
       <tr>
