Fix spelling error

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <label for="show_false_x_rate_complements">'False ... rate' complements</label> <br/>
 
         <input type="checkbox" id="show_misc_summary_metrics" name="show_misc_summary_metrics" rv-checked="show_misc_summary_metrics">
-        <label for="show_misc_summary_metrics">Miscellaenous summary statistics</label> <br/>
+        <label for="show_misc_summary_metrics">Miscellaneous summary statistics</label> <br/>
       </div>
 
 
