Add IDs to matrix values

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           <td class="tp big_four">
             <div class="scale_blob" style="bottom: 0;right: 0;" rv-show="show_scale_blobs" rv-square_size_rem="tp_size | watch tp tn fp fn "></div>
             <label for="tp">True Positives</label> 
-            <input type="number" name="tp" rv-value="tp" min="0">
+            <input type="number" id="tp" name="tp" rv-value="tp" min="0">
           </td>
           <td class="fn big_four">
             <div class="scale_blob" style="bottom: 0; left: 0;" rv-show="show_scale_blobs" rv-square_size_rem="fn_size | watch tp tn fp fn "></div>
             <label for="fn">False Negatives</label>
-            <input type="number" name="fn" rv-value="fn" min="0">
+            <input type="number" id="fn" name="fn" rv-value="fn" min="0">
           </td>
           <td class="p">{p | watch tp fn}</td>
         </tr>
@@ -54,12 +54,12 @@
           <td class="fp big_four">
             <div class="scale_blob" style="top: 0; right: 0;" rv-show="show_scale_blobs" rv-square_size_rem="fp_size | watch tp tn fp fn "></div>
             <label for="fp">False Positives</label>
-            <input type="number" name="fp" rv-value="fp" min="0">
+            <input type="number" id="fp" name="fp" rv-value="fp" min="0">
           </td>
           <td class="tn big_four">
             <div class="scale_blob" style="top: 0; left: 0;" rv-show="show_scale_blobs" rv-square_size_rem="tn_size | watch tp tn fp fn "></div>
             <label for="tn">True Negatives</label> 
-            <input type="number" name="tn" rv-value="tn" min="0">
+            <input type="number" id="tn" name="tn" rv-value="tn" min="0">
           </td>
           <td class="n">{n | watch fp tn}</td>
         </tr>
