--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <th><span class="sensitivity">Sensitivity</span></td>
           <td><span class="tp">{tp}</span> / <span class="p">{p | watch tp fn}</span> = </td>
           <td><span class="sensitivity"> {sensitivity | watch tp fn | percent} </span></td>
-          <td class='synonyms'>True positive rate, recall, hit rate, statistical power</td> 
+          <td class='synonyms'>True positive rate, recall, hit rate, statistical power, confidence level</td> 
         </tr>
 
         <tr>
@@ -173,7 +173,7 @@
             <span class="fp">{fp}</span> / <span class="n">{n | watch tn fp}</span> = 
           </td>
           <td>{false_positive_rate | watch tn fp | percent}</td>
-          <td class='synonyms'>Fall-out, 100% - <span class="specificity">{specificity | watch tn fp | percent}</span></td> 
+          <td class='synonyms'>Fall-out, 100% - <span class="specificity">{specificity | watch tn fp | percent}</span>, significance level</td> 
         </tr>
 
         <tr rv-show="show_false_x_rate_complements">
