Add Clicky analytics

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <script src="main.js"></script>
     <link rel="stylesheet" href="main.css?220211T0500" />
+  
+    <!-- Clicky Analytics -->
+    <script async src="//static.getclicky.com/101362842.js"></script>
 
     <title>Interactive Confusion Matrix</title>
   </head>
